fix(templates): Add disqus hash on comment links  #4

--- a/src/partials/post/list.hbs
+++ b/src/partials/post/list.hbs
@@ -23,7 +23,7 @@
           {{/foreach}}
       </li>
       <li class="post-item-meta-item">
-        <a href="{{url}}" data-disqus-identifier="{{id}}"></a>
+        <a href="{{url}}" data-disqus-identifier="{{id}}#disqus_thread"></a>
       </li>
     </ul>
   </footer>
