fix(templates): Change disqus hash to href #4

--- a/src/partials/post/list.hbs
+++ b/src/partials/post/list.hbs
@@ -23,7 +23,7 @@
           {{/foreach}}
       </li>
       <li class="post-item-meta-item">
-        <a href="{{url}}" data-disqus-identifier="{{id}}#disqus_thread"></a>
+        <a href="{{url}}#disqus_thread" data-disqus-identifier="{{id}}"></a>
       </li>
     </ul>
   </footer>
