--- a/post.hbs
+++ b/post.hbs
@@ -18,7 +18,7 @@
                 {{/foreach}}
               </li>
               <li class="post-meta-item">
-                <a href="{{url}}" data-disqus-identifier="{{id}}"></a>
+                <a href="{{url}}#disqus_thread" data-disqus-identifier="{{id}}"></a>
               </li>
             </ul>
             <h1 itemprop="name headline" class="post-title"><a href="{{url}}" itemprop="url" data-pjax title="{{{title}}}">{{{title}}}</a></h1>
