feat(styles): Hide author avatar on small viewports

--- a/src/assets/_scss/partials/_post-single.scss
+++ b/src/assets/_scss/partials/_post-single.scss
@@ -68,6 +68,10 @@
     float: left;
     margin-bottom: 0;
     margin-right: 10px;
+
+    @include breakpoint(x-small) {
+      display: none;
+    }
   }
 }
 
