feat(drawer): Completely new design #10

--- a/src/assets/_scss/modules/_vars.scss
+++ b/src/assets/_scss/modules/_vars.scss
@@ -16,7 +16,7 @@ $breakpoint-xx-large: 1444px - 1px;
 // PALLETE
 //----------------------------------*/
 
-$background-color: #fff;
+$background-color: #FFF;
 $text-color: #333;
 $muted-text-color: #B3B3B3;
 $line-breaks-color: #F2F2F2;
@@ -38,7 +38,8 @@ $text-font-family: "Droid Serif", Georgia, Cambria, "Times New Roman",
 //----------------------------------*/
 
 $drawer-background-color: #232323;
-$drawer-text-color: #fff;
+$drawer-text-color: #909090;
+$drawer-hover-color: #DDD;
 
 //----------------------------------*\
 // INPUTS
