fix(templates): Add missing [data-pjax] attributes

--- a/src/partials/custom/navigation.hbs
+++ b/src/partials/custom/navigation.hbs
@@ -21,7 +21,7 @@ Title
 }}
 
 <li class="drawer-list-item">
-  <a href="/">
+  <a href="/" data-pjax>
     <i class="fa fa-home"></i>Home
   </a>
 </li>
