--- a/src/index.hbs
+++ b/src/index.hbs
@@ -4,7 +4,7 @@
   <div {{#if @blog.cover}}data-load-image="{{@blog.cover}}"{{/if}} class="cover-image"></div>
   <div class="cover-container">
     {{#if @blog.logo}}
-      <a href="{{@blog.url}}" class="cover-logo">
+      <a href="{{@blog.url}}" class="cover-logo" data-pjax>
         <img src="{{@blog.logo}}" alt="Blog Logo">
       </a>
     {{/if}}
