fix(templates): Only show pagination if it exists

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -21,7 +21,9 @@
       {{/foreach}}
     </section>
 
-    {{pagination}}
+    {{#if pagination}}
+      {{pagination}}
+    {{/if}}
 
     {{> footer this}}
   </div>
