Add bio on post

--- a/src/assets/_scss/partials/_cover.scss
+++ b/src/assets/_scss/partials/_cover.scss
@@ -65,6 +65,8 @@
 }
 
 .cover-description {
-  font-size: 16px;
+  font-family: "ff-tisa-web-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+  font-style: italic;
+  font-size: 18px;
   line-height: 1.2;
 }
