Update meta.hbs to fix Twitter Cards
To get a basic summary card from Twitter they REQUIRE the meta tags "twitter:card", "twitter:title" and "twitter:description". I've added "twitter:card" and "twitter:description".

Having said that Twitter Cards will only work for your index page. The meta.hbs file has to be hooked into every post for twitter cards to properly work. 

E.g If I tweet the link www.mikeyjck.com it will have a Twitter Card however www.mikeyjck.com/up-running/ will not.

--- a/partials/custom/meta.hbs
+++ b/partials/custom/meta.hbs
@@ -1,3 +1,9 @@
+{{! Specify the type of Twitter card that you want }}
+<meta name="twitter:card" content="">
+
+{{!Description of Post contents - Ghost has no way of outputting Post text like this so for now we have to use {{@blog.description}}
+<meta name="og:description" content="{{@blog.description}}">
+
 {{! The Twitter username of the owner of this card's domain }}
 <meta name="twitter:site" content="@yourblogtwitter">
 
