--- a/src/assets/_scss/partials/_main.scss
+++ b/src/assets/_scss/partials/_main.scss
@@ -1,21 +1,28 @@
 html,
 body,
-.container {
+#container {
   height: 100%;
 }
 
+body {
+  &.drawer-transition {
+    overflow-x: hidden;
+  }
+}
+
 #container {
-  overflow: hidden;
-  transition: transform cubic-bezier(.2, .3, .25, .9) .2s;
+  position: relative;
+  transition: transform cubic-bezier(.2, .3, .25, .9) .2s, opacity .3s;
   backface-visibility: hidden;
+  opacity: 1;
+
+  .nprogress-busy & {
+    transition-delay: .1s;
+    opacity: 0;
+  }
 
   .drawer-transition & {
-    left: 0;
-    position: fixed;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    z-index: 800;
+    //z-index: 100;
   }
 
   .drawer-open & {
@@ -24,8 +31,9 @@ body,
 }
 
 .surface {
-  position: absolute;
+  position: relative;
   top: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
 }
@@ -33,13 +41,11 @@ body,
 .surface-container {
   position: relative;
   height: 100%;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
 }
 
 .content {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 .wrapper {
@@ -51,7 +57,6 @@ body,
   outline: 0;
   background-color: $background-color;
   overflow: auto;
-  -webkit-overflow-scrolling: touch;
 
   @include breakpoint(medium) {
     position: relative;
@@ -59,12 +64,13 @@ body,
   }
 
   &.wrapper-post {
-    position: relative;
     left: 0;
+    position: relative;
   }
 }
 
 .wrapper-container {
+  position: relative;
   padding: 40px 10% 40px 185px;
   max-width: 910px;
 
