--- a/src/post.hbs
+++ b/src/post.hbs
@@ -20,7 +20,7 @@
                 </li>
               {{/if}}
               <li class="post-meta-item">
-                <a href="{{url}}#disqus_thread" data-disqus-identifier="{{id}}"></a>
+                <a href="#disqus_thread" data-disqus-identifier="{{id}}"></a>
               </li>
             </ul>
             <h1 itemprop="name headline" class="post-title"><a href="{{url}}" itemprop="url" data-pjax title="{{{title}}}">{{{title}}}</a></h1>
@@ -71,20 +71,26 @@
       {{/post}}
       <section itemprop="comment" class="post-comments">
         <div id="disqus_thread"></div>
-        <script type="text/javascript">
-          {{> custom/config}}
-          {{#post}}
-            var disqus_identifier = '{{id}}';
-          {{/post}}
-          (function() {
-              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-          })();
-        </script>
       </section>
     </article>
 
     {{> footer this}}
   </div>
 </section>
+
+<script type="text/javascript">
+  {{> custom/config}}
+
+  {{#post}}
+    var disqus_identifier = '{{id}}';
+  {{/post}}
+
+  if(typeof DISQUS !== 'object') {
+    (function () {
+    var s = document.createElement('script'); s.async = true;
+    s.type = 'text/javascript';
+    s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+  }
+</script>
