fix(): Fix twitter card meta-tags data

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -16,6 +16,8 @@
     <meta name="description" content="{{meta_description}}">
 
     <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{meta_title}}">
+    <meta name="twitter:description" content="{{meta_description}}">
 
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{meta_title}}">
