feat(): Add FastClick plugin. Close #14

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -62,6 +62,7 @@
     {{ghost_foot}}
 
     <!-- build:js /assets/js/foot-scripts.min.js -->
+    <script src="/assets/_components/fastclick/lib/fastclick.js"></script>
     <script src="/assets/_components/nprogress/nprogress.js"></script>
     <script src="/assets/_components/prismjs/prism.js"></script>
     <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
