--- a/src/index.hbs
+++ b/src/index.hbs
@@ -15,6 +15,8 @@
 
 <section class="wrapper">
   <div class="wrapper-container">
+    {{> custom/featured this}}
+
     <section class="post-list">
       {{#foreach posts}}
         {{> post/list this}}
