feat(styles): Add text-align utility classes

--- a/src/assets/_scss/modules/_utils.scss
+++ b/src/assets/_scss/modules/_utils.scss
@@ -54,3 +54,19 @@
   display: none !important;
   visibility: hidden !important;
 }
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
+}
