--- a/partials/post/list.hbs
+++ b/partials/post/list.hbs
@@ -19,9 +19,7 @@
       </li>
       {{#if tags}}
         <li class="post-item-meta-item">
-          {{#foreach tags}}
-            <span itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}">{{name}}</span>
-          {{/foreach}}
+          <span>{{tags separator=", "}}</span>
         </li>
       {{/if}}
       <li class="post-item-meta-item">
