--- a/post.hbs
+++ b/post.hbs
@@ -14,9 +14,7 @@
               </li>
               {{#if tags}}
                 <li class="post-meta-item">
-                  {{#foreach tags}}
-                    <span itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}">{{name}}</span>
-                  {{/foreach}}
+                  <span>{{tags separator=", "}}</span>
                 </li>
               {{/if}}
               <li class="post-meta-item">
