--- a/src/partials/post/list.hbs
+++ b/src/partials/post/list.hbs
@@ -8,7 +8,7 @@
     </h2>
   </header>
   <section itemprop="description" class="post-item-excerpt">
-    <p>{{excerpt words="35"}}&hellip;</p>
+    <p>{{excerpt words="200"}}&hellip;</p>
   </section>
   <footer class="post-item-footer">
     <ul class="post-item-meta-list">
@@ -21,6 +21,7 @@
         <li class="post-item-meta-item">
           {{#foreach tags}}
             <span itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}">{{name}}</span>
+            {{#if @last}} {{else}}, {{/if}}
           {{/foreach}}
         </li>
       {{/if}}
