couple fixes for ghost blogs hosted in subdirectory

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -31,16 +31,9 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <!-- build:css({src,.tmp}) /assets/css/main.min.css -->
-    <link href="/assets/_components/font-awesome/css/font-awesome.css">
-    <link href="/assets/_components/nprogress/nprogress.css">
-    <link href="/assets/_components/prism/themes/prism.css">
-    <link href="/assets/css/style.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" type="text/css" href="{{asset "css/3c236dc6.main.min.css"}}" />
 
-    <!-- build:js /assets/js/head-scripts.min.js -->
-    <script src="/assets/_components/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
+    <script type="text/javascript" src="{{asset "js/b14267da.head-scripts.min.js"}}"></script>
 
     {{ghost_head}}
   </head>
@@ -61,15 +54,7 @@
 
     {{ghost_foot}}
 
-    <!-- build:js /assets/js/foot-scripts.min.js -->
-    <script src="/assets/_components/fastclick/lib/fastclick.js"></script>
-    <script src="/assets/_components/nprogress/nprogress.js"></script>
-    <script src="/assets/_components/prism/prism.js"></script>
-    <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
-    <script src="/assets/js/drawer.js"></script>
-    <script src="/assets/js/imageLoader.js"></script>
-    <script src="/assets/js/scripts.js"></script>
-    <!-- endbuild -->
+    <script type="text/javascript" src="{{asset "js/a8765325.foot-scripts.min.js"}}"></script>
 
     <script type="text/javascript">
       {{> custom/config}}
