--- a/default.hbs
+++ b/default.hbs
@@ -31,9 +31,9 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="/assets/css/3c236dc6.main.min.css"/>
+    <link rel="stylesheet" href="{{asset 'css/a1102b22.main.min.css'}}"/>
 
-    <script src="/assets/js/b14267da.head-scripts.min.js"></script>
+    <script src="{{asset 'js/09c91376.head-scripts.min.js'}}"></script>
 
     {{ghost_head}}
   </head>
@@ -54,7 +54,7 @@
 
     {{ghost_foot}}
 
-    <script src="/assets/js/a8765325.foot-scripts.min.js"></script>
+    <script src="{{asset 'js/be432fa6.foot-scripts.min.js'}}"></script>
 
     <script type="text/javascript">
       {{> custom/config}}
