--- a/src/default.hbs
+++ b/src/default.hbs
@@ -32,14 +32,14 @@
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
     <!-- build:css({src,.tmp}) /assets/css/main.min.css -->
-    <link href="/assets/_components/font-awesome/css/font-awesome.css">
-    <link href="/assets/_components/nprogress/nprogress.css">
-    <link href="/assets/_components/prism/themes/prism.css">
-    <link href="/assets/css/style.css">
+    <link href="{{asset '_components/font-awesome/css/font-awesome.css'}}"
+    <link href="{{asset '_components/nprogress/nprogress.css'}}"
+    <link href="{{asset '_components/prism/themes/prism.css'}}"
+    <link href="{{asset 'css/style.css'}}"
     <!-- endbuild -->
 
     <!-- build:js /assets/js/head-scripts.min.js -->
-    <script src="/assets/_components/modernizr/modernizr.js"></script>
+    <script src="{{asset '_components/modernizr/modernizr.js'}}"</script>
     <!-- endbuild -->
 
     {{ghost_head}}
@@ -62,13 +62,13 @@
     {{ghost_foot}}
 
     <!-- build:js /assets/js/foot-scripts.min.js -->
-    <script src="/assets/_components/fastclick/lib/fastclick.js"></script>
-    <script src="/assets/_components/nprogress/nprogress.js"></script>
-    <script src="/assets/_components/prism/prism.js"></script>
-    <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
-    <script src="/assets/js/drawer.js"></script>
-    <script src="/assets/js/imageLoader.js"></script>
-    <script src="/assets/js/scripts.js"></script>
+    <script src="{{asset '_components/fastclick/lib/fastclick.js'}}"></script>
+    <script src="{{asset '_components/nprogress/nprogress.js'}}"></script>
+    <script src="{{asset '_components/prism/prism.js'}}"></script>
+    <script src="{{asset '_components/jquery-pjax/jquery.pjax.js'}}"></script>
+    <script src="{{asset 'js/drawer.js'}}"></script>
+    <script src="{{asset 'js/imageLoader.js'}}"></script>
+    <script src="{{asset 'js/scripts.js'}}"></script>
     <!-- endbuild -->
 
     <script type="text/javascript">
