Adding linked-tags using {{tags}} helper
This time to the files in ./src

See http://docs.ghost.org/themes/#tags-helper

Replaces the for-each loop with auto-generated tags list with the
separator '|'

--- a/src/partials/post/list.hbs
+++ b/src/partials/post/list.hbs
@@ -19,10 +19,7 @@
       </li>
       {{#if tags}}
         <li class="post-item-meta-item">
-          {{#foreach tags}}
-            <span itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}">{{name}}</span>
-            {{#if @last}} {{else}}, {{/if}}
-          {{/foreach}}
+          {{tags separator=" | "}}
         </li>
       {{/if}}
       <li class="post-item-meta-item">
