--- a/src/post.hbs
+++ b/src/post.hbs
@@ -15,7 +15,8 @@
               {{#if tags}}
                 <li class="post-meta-item">
                   {{#foreach tags}}
-                    <span itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}">{{name}}</span>
+                    <a itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}" href="{{url}}">{{name}}</a>
+                    {{~#if @last}} {{else}}, {{/if}}
                   {{/foreach}}
                 </li>
               {{/if}}
