--- a/partials/custom/meta.hbs
+++ b/partials/custom/meta.hbs
@@ -1,8 +1,19 @@
+{{! See https://dev.twitter.com/docs/cards for into on setting up Twitter Cards}}
+
+{{! Specify the type of Twitter card that you want }}
+<meta name="twitter:card" content="">
+
+{{!Post Title }}
+<meta property="twitter:title" content="{{meta_title}}">
+
+{{! Desciption of Post contents }}
+<meta name="twitter:description" content="{{excerpt}}">
+
 {{! The Twitter username of the owner of this card's domain }}
-<meta name="twitter:site" content="@yourblogtwitter">
+<meta name="twitter:site" content="@ ">
 
 {{! The Twitter username of the author of this content }}
-<meta name="twitter:creator" content="@yourtwitter">
+<meta name="twitter:creator" content="@ ">
 
 {{! Change for Google Webmaster verification }}
 <meta name="google-site-verification" content="">
