--- a/partials/custom/meta.hbs
+++ b/partials/custom/meta.hbs
@@ -1,3 +1,8 @@
+{{! Twitter Cards documentation: https://dev.twitter.com/docs/cards }}
+
+{{! twitter:card & twitter:title located in default.hbs}}
+{{! twitter:description located in post.hbs}}
+
 {{! The Twitter username of the owner of this card's domain }}
 <meta name="twitter:site" content="@yourblogtwitter">
 
