--- a/src/default.hbs
+++ b/src/default.hbs
@@ -35,6 +35,7 @@
     <link href="/assets/_components/font-awesome/css/font-awesome.css">
     <link href="/assets/_components/nprogress/nprogress.css">
     <link href="/assets/_components/prism/themes/prism.css">
+    <link href="/assets/_components/prism/plugins/autolinker/prism-autolinker.css">
     <link href="/assets/css/style.css">
     <!-- endbuild -->
 
@@ -64,7 +65,31 @@
     <!-- build:js /assets/js/foot-scripts.min.js -->
     <script src="/assets/_components/fastclick/lib/fastclick.js"></script>
     <script src="/assets/_components/nprogress/nprogress.js"></script>
+
+    <!-- PrismJS core, aditional languages and plugins -->
     <script src="/assets/_components/prism/prism.js"></script>
+    <script src="/assets/_components/prism/components/prism-aspnet.js"></script>
+    <script src="/assets/_components/prism/components/prism-bash.js"></script>
+    <script src="/assets/_components/prism/components/prism-c.js"></script>
+    <script src="/assets/_components/prism/components/prism-clike.js"></script>
+    <script src="/assets/_components/prism/components/prism-coffescript.js"></script>
+    <script src="/assets/_components/prism/components/prism-cpp.js"></script>
+    <script src="/assets/_components/prism/components/prism-csharp.js"></script>
+    <script src="/assets/_components/prism/components/prism-css-extras.js"></script>
+    <script src="/assets/_components/prism/components/prism-gherkin.js"></script>
+    <script src="/assets/_components/prism/components/prism-go.js"></script>
+    <script src="/assets/_components/prism/components/prism-groovy.js"></script>
+    <script src="/assets/_components/prism/components/prism-http.js"></script>
+    <script src="/assets/_components/prism/components/prism-java.js"></script>
+    <script src="/assets/_components/prism/components/prism-nsis.js"></script>
+    <script src="/assets/_components/prism/components/prism-php.js"></script>
+    <script src="/assets/_components/prism/components/prism-php-extras.js"></script>
+    <script src="/assets/_components/prism/components/prism-python.js"></script>
+    <script src="/assets/_components/prism/components/prism-ruby.js"></script>
+    <script src="/assets/_components/prism/components/prism-scss.js"></script>
+    <script src="/assets/_components/prism/components/prism-sql.js"></script>
+    <script src="/assets/_components/prism/plugins/autolinker/prism-autolinker.js"></script>
+
     <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
     <script src="/assets/js/drawer.js"></script>
     <script src="/assets/js/imageLoader.js"></script>
