--- a/src/post.hbs
+++ b/src/post.hbs
@@ -91,18 +91,20 @@
 </section>
 
 <script type="text/javascript">
-  {{> custom/config}}
-
-  {{#post}}
+  if(GHOSTIUM.haveDisqus) {
+    {{#post}}
     var disqus_identifier = '{{id}}';
-  {{/post}}
+    {{/post}}
 
-  if(typeof DISQUS !== 'object') {
-    (function () {
-    var s = document.createElement('script'); s.async = true;
-    s.type = 'text/javascript';
-    s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
+    if(typeof DISQUS !== 'object') {
+      (function () {
+      var s = document.createElement('script'); s.async = true;
+      s.type = 'text/javascript';
+      s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      }());
+    }
+  } else {
+    document.querySelector('.post-comments').remove();
   }
 </script>
