--- a/src/default.hbs
+++ b/src/default.hbs
@@ -57,6 +57,7 @@
       window.GHOSTIUM = {};
       GHOSTIUM.haveGA = typeof ga_ua !== 'undefined' && ga_ua !== 'UA-XXXXX-X';
       GHOSTIUM.haveDisqus = typeof disqus_shortname !== 'undefined' && disqus_shortname !== 'example';
+      GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : false;
     </script>
 
     <!-- build:js /assets/js/head-scripts.min.js -->
