Show read time on list views + icons

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -87,7 +87,7 @@
     <!-- build:js /assets/js/foot-scripts.min.js -->
     <script src="/assets/_components/fastclick/lib/fastclick.js"></script>
 
-    <!-- PrismJS core, aditional languages and plugins -->
+    <!-- PrismJS core, additional languages and plugins -->
     <script src="/assets/_components/prism/prism.js"></script>
     <script src="/assets/_components/prism/components/prism-aspnet.js"></script>
     <script src="/assets/_components/prism/components/prism-bash.js"></script>
@@ -111,9 +111,14 @@
     <script src="/assets/_components/prism/components/prism-sql.js"></script>
     <script src="/assets/_components/prism/plugins/autolinker/prism-autolinker.js"></script>
 
+    <!-- Other third-party scripts -->
     <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
+    <script src="/assets/_components/reading-time/src/readingTime.js"></script>
+
+    <!-- Ghostium scripts -->
     <script src="/assets/js/drawer.js"></script>
     <script src="/assets/js/imageLoader.js"></script>
+    <script src="/assets/js/readTime.js"></script>
     <script src="/assets/js/scripts.js"></script>
     <!-- endbuild -->
 
