--- a/partials/post/list.hbs
+++ b/partials/post/list.hbs
@@ -12,20 +12,22 @@
   </section>
   <footer class="post-item-footer">
     <ul class="post-item-meta-list">
-      <li class="post-item-meta-item">
+      <li class="post-item-meta-item post-item-meta-item-date-published">
         <time datetime="{{date published_at format="YYYY-MM-DD"}}" itemprop="datePublished">
           {{date published_at timeago="true"}}
         </time>
       </li>
       {{#if tags}}
-        <li class="post-item-meta-item">
+        <li class="post-item-meta-item post-item-meta-item-tags">
+          <i class="fa fa-tags"></i>
           {{#foreach tags}}
             <a itemprop="{{#if @first}}articleSection{{else}}keywords{{/if}}" href="{{url}}" data-pjax>{{name}}</a>
             {{~#if @last}} {{else}}, {{/if}}
           {{/foreach}}
         </li>
       {{/if}}
-      <li class="post-item-meta-item">
+      <li class="post-item-meta-item post-item-meta-item-comments">
+        <i class="fa fa-comments"></i>
         <a href="{{url}}#disqus_thread" data-pjax data-disqus-identifier="{{id}}">Comments</a>
       </li>
     </ul>
