--- a/src/post.hbs
+++ b/src/post.hbs
@@ -1,7 +1,32 @@
 {{!< default}}
 
 {{#post}}
+
   <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post {{post_class}}">
+    <div class="post-meta-bar">
+      <div class="post-meta-bar__side post-meta-bar__side--left">
+        <a href="{{author.website}}" class="post-meta-bar-author">
+          {{#if author.image}}
+            <img src="{{author.image}}" alt="{{author.name}}">
+          {{/if}}
+
+          {{author.name}}<!--
+        --></a>
+
+        {{tags prefix="in " separator=", "}}
+
+        on
+
+        <time datetime="{{date published_at format="YYYY-MM-DD"}}" itemprop="datePublished">
+          {{date published_at format="MMM D"}}<span>, {{date published_at format="YYYY"}}</span>
+        </time>
+      </div>
+
+      <div class="post-meta-bar__side post-meta-bar__side--right">
+
+      </div>
+    </div>
+
     <div class="post-image">
       <div>
         <header class="post-header">
